--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TimerApp",
+  "name": "WeatherApp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "@react-native/new-app-screen": "0.80.1"
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-svg": "^15.12.0",
+    "react-native-svg-transformer": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
